scripts/nullaway/annotator/urlc58b5c5b73_emiliano_fiuba_2013_2c_7510_tgz-pJ8-test_java_FrameworkTestsJ8.txt
../annotator/urlc58b5c5b73_emiliano_fiuba_2013_2c_7510_tgz-pJ8-test_java_FrameworkTestsJ8/src/main/java/Test.java:39: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return result;
		^
    (see http://t.uber.com/nullaway )
1 error
